test.output
Terminals which are not used

   ST_IF
   ST_THEN
   ST_ELSEIF
   ST_ELSE
   ST_END
   ST_FOR
   ST_TO
   ST_IN
   ST_NEXT
   ST_WHILE
   ST_FUNCTION
   ST_EXIT
   ST_DIM
   ST_AS
   ST_STRING
   ST_INT
   ST_FLOAT
   ST_BOOL
   ST_NOT
   ST_NULL
   ST_EQ
   ST_COMMA
   ST_AMP
   ST_UNDERSCORE
   ST_SEMICOLON
   T_STRING
   T_IDENTIFIER
   T_FLOAT
   T_OTHER


Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | program line

    3 line: ST_NEWLINE
    4     | expr ST_NEWLINE

    5 expr: T_INT
    6     | ST_OPEN_PAREN subexpr ST_CLOSE_PAREN
    7     | subexpr

    8 subexpr: ST_PLUS expr
    9        | ST_MINUS expr
   10        | expr ST_PLUS expr
   11        | expr ST_MINUS expr
   12        | expr ST_STAR expr
   13        | expr ST_SLASH expr
   14        | expr ST_OR expr
   15        | expr ST_AND expr
   16        | expr ST_EQEQ expr
   17        | expr ST_NOT_EQ expr
   18        | expr ST_GREATER_EQ expr
   19        | expr ST_LESS_EQ expr
   20        | expr ST_GREATER expr
   21        | expr ST_LESS expr


Terminals, with rules where they appear

$end (0) 0
error (256)
ST_IF (258)
ST_THEN (259)
ST_ELSEIF (260)
ST_ELSE (261)
ST_END (262)
ST_FOR (263)
ST_TO (264)
ST_IN (265)
ST_NEXT (266)
ST_WHILE (267)
ST_FUNCTION (268)
ST_EXIT (269)
ST_DIM (270)
ST_AS (271)
ST_STRING (272)
ST_INT (273)
ST_FLOAT (274)
ST_BOOL (275)
ST_AND (276) 15
ST_OR (277) 14
ST_NOT (278)
ST_NULL (279)
ST_PLUS (280) 8 10
ST_MINUS (281) 9 11
ST_STAR (282) 12
ST_SLASH (283) 13
ST_EQ (284)
ST_EQEQ (285) 16
ST_NOT_EQ (286) 17
ST_LESS_EQ (287) 19
ST_GREATER_EQ (288) 18
ST_LESS (289) 21
ST_GREATER (290) 20
ST_OPEN_PAREN (291) 6
ST_CLOSE_PAREN (292) 6
ST_COMMA (293)
ST_AMP (294)
ST_UNDERSCORE (295)
ST_SEMICOLON (296)
ST_NEWLINE (297) 3 4
UNARY_MINUS (298)
UNARY_PLUS (299)
T_STRING (300)
T_IDENTIFIER (301)
T_INT (302) 5
T_FLOAT (303)
T_OTHER (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1 2, on right: 0 2
line (52)
    on left: 3 4, on right: 2
expr (53)
    on left: 5 6 7, on right: 4 8 9 10 11 12 13 14 15 16 17 18 19 20
    21
subexpr (54)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21,
    on right: 6 7


state 0

    0 $accept: . program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


state 1

    0 $accept: program . $end
    2 program: program . line

    $end           shift, and go to state 2
    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    ST_NEWLINE     shift, and go to state 6
    T_INT          shift, and go to state 7

    line     go to state 8
    expr     go to state 9
    subexpr  go to state 10


state 2

    0 $accept: program $end .

    $default  accept


state 3

    8 subexpr: ST_PLUS . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 11
    subexpr  go to state 10


state 4

    9 subexpr: ST_MINUS . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 12
    subexpr  go to state 10


state 5

    6 expr: ST_OPEN_PAREN . subexpr ST_CLOSE_PAREN

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 13
    subexpr  go to state 14


state 6

    3 line: ST_NEWLINE .

    $default  reduce using rule 3 (line)


state 7

    5 expr: T_INT .

    $default  reduce using rule 5 (expr)


state 8

    2 program: program line .

    $default  reduce using rule 2 (program)


state 9

    4 line: expr . ST_NEWLINE
   10 subexpr: expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    ST_AND         shift, and go to state 15
    ST_OR          shift, and go to state 16
    ST_PLUS        shift, and go to state 17
    ST_MINUS       shift, and go to state 18
    ST_STAR        shift, and go to state 19
    ST_SLASH       shift, and go to state 20
    ST_EQEQ        shift, and go to state 21
    ST_NOT_EQ      shift, and go to state 22
    ST_LESS_EQ     shift, and go to state 23
    ST_GREATER_EQ  shift, and go to state 24
    ST_LESS        shift, and go to state 25
    ST_GREATER     shift, and go to state 26
    ST_NEWLINE     shift, and go to state 27


state 10

    7 expr: subexpr .

    $default  reduce using rule 7 (expr)


state 11

    8 subexpr: ST_PLUS expr .
   10        | expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    $default  reduce using rule 8 (subexpr)


state 12

    9 subexpr: ST_MINUS expr .
   10        | expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    $default  reduce using rule 9 (subexpr)


state 13

   10 subexpr: expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    ST_AND         shift, and go to state 15
    ST_OR          shift, and go to state 16
    ST_PLUS        shift, and go to state 17
    ST_MINUS       shift, and go to state 18
    ST_STAR        shift, and go to state 19
    ST_SLASH       shift, and go to state 20
    ST_EQEQ        shift, and go to state 21
    ST_NOT_EQ      shift, and go to state 22
    ST_LESS_EQ     shift, and go to state 23
    ST_GREATER_EQ  shift, and go to state 24
    ST_LESS        shift, and go to state 25
    ST_GREATER     shift, and go to state 26


state 14

    6 expr: ST_OPEN_PAREN subexpr . ST_CLOSE_PAREN
    7     | subexpr .

    ST_CLOSE_PAREN  shift, and go to state 28

    $default  reduce using rule 7 (expr)


state 15

   15 subexpr: expr ST_AND . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 29
    subexpr  go to state 10


state 16

   14 subexpr: expr ST_OR . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 30
    subexpr  go to state 10


state 17

   10 subexpr: expr ST_PLUS . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 31
    subexpr  go to state 10


state 18

   11 subexpr: expr ST_MINUS . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 32
    subexpr  go to state 10


state 19

   12 subexpr: expr ST_STAR . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 33
    subexpr  go to state 10


state 20

   13 subexpr: expr ST_SLASH . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 34
    subexpr  go to state 10


state 21

   16 subexpr: expr ST_EQEQ . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 35
    subexpr  go to state 10


state 22

   17 subexpr: expr ST_NOT_EQ . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 36
    subexpr  go to state 10


state 23

   19 subexpr: expr ST_LESS_EQ . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 37
    subexpr  go to state 10


state 24

   18 subexpr: expr ST_GREATER_EQ . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 38
    subexpr  go to state 10


state 25

   21 subexpr: expr ST_LESS . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 39
    subexpr  go to state 10


state 26

   20 subexpr: expr ST_GREATER . expr

    ST_PLUS        shift, and go to state 3
    ST_MINUS       shift, and go to state 4
    ST_OPEN_PAREN  shift, and go to state 5
    T_INT          shift, and go to state 7

    expr     go to state 40
    subexpr  go to state 10


state 27

    4 line: expr ST_NEWLINE .

    $default  reduce using rule 4 (line)


state 28

    6 expr: ST_OPEN_PAREN subexpr ST_CLOSE_PAREN .

    $default  reduce using rule 6 (expr)


state 29

   10 subexpr: expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   15        | expr ST_AND expr .
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    ST_PLUS        shift, and go to state 17
    ST_MINUS       shift, and go to state 18
    ST_STAR        shift, and go to state 19
    ST_SLASH       shift, and go to state 20
    ST_EQEQ        shift, and go to state 21
    ST_NOT_EQ      shift, and go to state 22
    ST_LESS_EQ     shift, and go to state 23
    ST_GREATER_EQ  shift, and go to state 24
    ST_LESS        shift, and go to state 25
    ST_GREATER     shift, and go to state 26

    $default  reduce using rule 15 (subexpr)


state 30

   10 subexpr: expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   14        | expr ST_OR expr .
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    ST_AND         shift, and go to state 15
    ST_PLUS        shift, and go to state 17
    ST_MINUS       shift, and go to state 18
    ST_STAR        shift, and go to state 19
    ST_SLASH       shift, and go to state 20
    ST_EQEQ        shift, and go to state 21
    ST_NOT_EQ      shift, and go to state 22
    ST_LESS_EQ     shift, and go to state 23
    ST_GREATER_EQ  shift, and go to state 24
    ST_LESS        shift, and go to state 25
    ST_GREATER     shift, and go to state 26

    $default  reduce using rule 14 (subexpr)


state 31

   10 subexpr: expr . ST_PLUS expr
   10        | expr ST_PLUS expr .
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    ST_STAR   shift, and go to state 19
    ST_SLASH  shift, and go to state 20

    $default  reduce using rule 10 (subexpr)


state 32

   10 subexpr: expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   11        | expr ST_MINUS expr .
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    ST_STAR   shift, and go to state 19
    ST_SLASH  shift, and go to state 20

    $default  reduce using rule 11 (subexpr)


state 33

   10 subexpr: expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   12        | expr ST_STAR expr .
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    $default  reduce using rule 12 (subexpr)


state 34

   10 subexpr: expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   13        | expr ST_SLASH expr .
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    $default  reduce using rule 13 (subexpr)


state 35

   10 subexpr: expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   16        | expr ST_EQEQ expr .
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    ST_PLUS        shift, and go to state 17
    ST_MINUS       shift, and go to state 18
    ST_STAR        shift, and go to state 19
    ST_SLASH       shift, and go to state 20
    ST_LESS_EQ     shift, and go to state 23
    ST_GREATER_EQ  shift, and go to state 24
    ST_LESS        shift, and go to state 25
    ST_GREATER     shift, and go to state 26

    $default  reduce using rule 16 (subexpr)


state 36

   10 subexpr: expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   17        | expr ST_NOT_EQ expr .
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    ST_PLUS        shift, and go to state 17
    ST_MINUS       shift, and go to state 18
    ST_STAR        shift, and go to state 19
    ST_SLASH       shift, and go to state 20
    ST_LESS_EQ     shift, and go to state 23
    ST_GREATER_EQ  shift, and go to state 24
    ST_LESS        shift, and go to state 25
    ST_GREATER     shift, and go to state 26

    $default  reduce using rule 17 (subexpr)


state 37

   10 subexpr: expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   19        | expr ST_LESS_EQ expr .
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    ST_PLUS   shift, and go to state 17
    ST_MINUS  shift, and go to state 18
    ST_STAR   shift, and go to state 19
    ST_SLASH  shift, and go to state 20

    $default  reduce using rule 19 (subexpr)


state 38

   10 subexpr: expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   18        | expr ST_GREATER_EQ expr .
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr

    ST_PLUS   shift, and go to state 17
    ST_MINUS  shift, and go to state 18
    ST_STAR   shift, and go to state 19
    ST_SLASH  shift, and go to state 20

    $default  reduce using rule 18 (subexpr)


state 39

   10 subexpr: expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   21        | expr . ST_LESS expr
   21        | expr ST_LESS expr .

    ST_PLUS   shift, and go to state 17
    ST_MINUS  shift, and go to state 18
    ST_STAR   shift, and go to state 19
    ST_SLASH  shift, and go to state 20

    $default  reduce using rule 21 (subexpr)


state 40

   10 subexpr: expr . ST_PLUS expr
   11        | expr . ST_MINUS expr
   12        | expr . ST_STAR expr
   13        | expr . ST_SLASH expr
   14        | expr . ST_OR expr
   15        | expr . ST_AND expr
   16        | expr . ST_EQEQ expr
   17        | expr . ST_NOT_EQ expr
   18        | expr . ST_GREATER_EQ expr
   19        | expr . ST_LESS_EQ expr
   20        | expr . ST_GREATER expr
   20        | expr ST_GREATER expr .
   21        | expr . ST_LESS expr

    ST_PLUS   shift, and go to state 17
    ST_MINUS  shift, and go to state 18
    ST_STAR   shift, and go to state 19
    ST_SLASH  shift, and go to state 20

    $default  reduce using rule 20 (subexpr)
